BSS-21627: BOI: Gamification Footer has created "Overlap" issue

--- a/src/assets/css/prevPutDetails.less
+++ b/src/assets/css/prevPutDetails.less
@@ -48,4 +48,5 @@
 	position:absolute;
 	left:0px;
 	top:0px;
+	position: absolute;
 }
